--- a/brush.html
+++ b/brush.html
@@ -110,16 +110,16 @@
             b1.contextConfig.foreColor="#cc00cc";
             b1.brushConfig.size = 150;
             // b1.brushConfig.roundness = 0.4
-            b1.brushConfig.scaleX = 1
-            b1.brushConfig.scaleY = 0.4
-            b1.brushConfig.angle = -0.25;
-            b1.brushConfig.sizeJitter = 1;
-            b1.brushConfig.angleJitter = 1;
-            b1.brushConfig.opacityJitter = 1;
-            b1.brushConfig.flowJitter = 1;
-            b1.brushConfig.hueJitter = 1;
-            b1.brushConfig.saturationJitter = 1;
-            b1.brushConfig.brightnessJitter = 1;
+            // b1.brushConfig.scaleX = 1
+            // b1.brushConfig.scaleY = 0.4
+            // b1.brushConfig.angle = -0.25;
+            // b1.brushConfig.sizeJitter = 1;
+            // b1.brushConfig.angleJitter = 1;
+            // b1.brushConfig.opacityJitter = 1;
+            // b1.brushConfig.flowJitter = 1;
+            // b1.brushConfig.hueJitter = 1;
+            // b1.brushConfig.saturationJitter = 1;
+            // b1.brushConfig.brightnessJitter = 1;
             b1.flush();
 
             const c1 = globalThis.c1 =  document.querySelector('#c1');
@@ -142,7 +142,14 @@
     <script>
         function redraw(){
             c1.clear();
-            b1.drawOnLine(c1.ctx,0,50,300,200)
+            b1.ready();
+
+            let remainInterval = 0;
+            const brushConfig = b1.brushConfig;
+            const pointerEvent = {...b1.lastPointerEvent};
+            pointerEvent.pressure = 0
+            b1.lastPointerEvent.pressure = 1
+            remainInterval = b1.drawOnLine(c1.ctx,b1.width/2,b1.height/2,c1.width-b1.width/2,c1.height-b1.height/2,remainInterval,brushConfig,pointerEvent)
         }
     </script>
     
