--- a/brush.html
+++ b/brush.html
@@ -80,6 +80,7 @@
         }
         
     </style>
+    <script src="asset/WcHelper.js"></script>
     <script type="module">
         import HtmlUtil from "./wc/lib/HtmlUtil.js";
         if(globalThis.Wc===undefined) globalThis.Wc = {}
@@ -108,7 +109,7 @@
         window.addEventListener('load',(event)=>{
             const b1 = globalThis.b1 = document.querySelector('.b1');
             b1.contextConfig.foreColor="#cc00cc";
-            b1.brushConfig.size = 150;
+            b1.brushConfig.size = 50;
             // b1.brushConfig.roundness = 0.4
             // b1.brushConfig.scaleX = 1
             // b1.brushConfig.scaleY = 0.4
@@ -120,6 +121,7 @@
             // b1.brushConfig.hueJitter = 1;
             // b1.brushConfig.saturationJitter = 1;
             // b1.brushConfig.brightnessJitter = 1;
+            b1.brushConfig.sizeControl = 'penPressure';
             b1.flush();
 
             const c1 = globalThis.c1 =  document.querySelector('#c1');
@@ -138,18 +140,26 @@
                 }
             }
         })
+        window.addEventListener('resize',(event)=>{
+          redraw();
+        })
     </script>
     <script>
         function redraw(){
-            c1.clear();
+            // c1.clear();
+            c1.width = c1.clientWidth
+            c1.height = c1.clientHeight
             b1.ready();
 
-            let remainInterval = 0;
-            const brushConfig = b1.brushConfig;
-            const pointerEvent = {...b1.lastPointerEvent};
-            pointerEvent.pressure = 0
-            b1.lastPointerEvent.pressure = 1
-            remainInterval = b1.drawOnLine(c1.ctx,b1.width/2,b1.height/2,c1.width-b1.width/2,c1.height-b1.height/2,remainInterval,brushConfig,pointerEvent)
+            // let remainInterval = 0;
+            // const pointerEvent = {...b1.lastPointerEvent};
+            // pointerEvent.pressure = 0
+            // const brushConfig = b1.brushConfig;
+            // b1.lastPointerEvent.pressure = 1
+            // remainInterval = b1.drawOnLine(c1.ctx,b1.width/2,b1.height/2,c1.width-b1.width/2,c1.height-b1.height/2,remainInterval,pointerEvent,brushConfig)
+
+
+            WcHelper.drawBrushPreviewCanvas(b1,c1)
         }
     </script>
     
@@ -171,7 +181,7 @@
                         <div class="card-header">drawOnLine</div>
                         <div class="card-body" style="background-color: #eef;">
                             <div>
-                                <canvas  id="c1" class=" d-block mx-auto" is="wc-canvas" width="300" height="300"></canvas>
+                                <canvas  id="c1" class=" d-block mx-auto" is="wc-canvas" width="300" height="300" style="width: 100%; height: 100%;"></canvas>
                             </div>
                             <hr>
                             <div>
