파일 저장 개선, webp, jpg 추가

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                     <select class="form-select" name="quality">
                       <option value="1">100</option>
                       <option value="0.9">90</option>
-                      <option value="0.8">80</option>
+                      <option selected value="0.8">80</option>
                       <option value="0.7">70</option>
                       <option value="0.6">60</option>
                       <option value="0.5">50</option>
