브러시 미리보기

--- a/index.html
+++ b/index.html
@@ -1505,8 +1505,8 @@
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush0" is="wc-brush" width="5" height="5"></canvas>
             </div>
-            <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
+            <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
+              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
             </div>
           </div>
           <div class="modal-body brush-config">
@@ -1783,8 +1783,8 @@
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush1" is="wc-brush" width="5" height="5"></canvas>
             </div>
-            <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
+            <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
+              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
             </div>
           </div>
           <div class="modal-body brush-config">
@@ -1805,8 +1805,8 @@
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush2" is="wc-brush" width="5" height="5"></canvas>
             </div>
-            <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
+            <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
+              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
             </div>
           </div>
           <div class="modal-body brush-config">
@@ -1827,8 +1827,8 @@
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="brush3" is="wc-brush" width="5" height="5"></canvas>
             </div>
-            <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
+            <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
+              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
             </div>
           </div>
           <div class="modal-body brush-config">
@@ -1849,8 +1849,8 @@
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
               <canvas id="eraser" is="wc-brush" width="5" height="5"></canvas>
             </div>
-            <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="200"></canvas>
+            <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
+              <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
             </div>
           </div>
           <div class="modal-body brush-config">
