--- a/brush.html
+++ b/brush.html
@@ -468,12 +468,15 @@
                                 </div>
                               </div>
                               <hr class="my-1">
+                              <header>
+                                <h4 class="m-0">Scattering (산란)</h4>
+                              </header>
                               <div>
-                                <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Scatter (퍼지는 정도)</div>
+                                <div class="form-label mb-0"><i class="bi bi-shuffle"></i> ScatterAmount (퍼지는 정도)</div>
                                 <div class="input-group ui-input-stepper">
                                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                   <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
-                                    <input type="range" class="form-range d-block" name="scatter" placeholder="scatter" step="0.01" min="0" max="3" value="0" >
+                                    <input type="range" class="form-range d-block" name="scatterAmount" placeholder="scatterAmount" step="0.01" min="0" max="3" value="0" >
                                   </div>
                                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                                 </div>
@@ -497,7 +500,7 @@
                                 </div>
                               </div>
                               <div>
-                                <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Count Jitter (Count 수 변동)</div>
+                                <div class="form-label mb-0"><i class="bi bi-shuffle"></i> CountJitter (Count 수 변동)</div>
                                 <div class="input-group ui-input-stepper">
                                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                                   <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" >
