--- a/brush.html
+++ b/brush.html
@@ -468,13 +468,13 @@
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Axes (양축 스캐터링)</div>
                   <select class="form-select " name="scatterAxes" >
-                    <option selected value="xy">x축과 y축</option>
-                    <option value="x">x축</option>
-                    <option value="y">y축</option>
+                    <option value="y">y축(라인 수직)</option>
+                    <option value="x">x축(라인 방향)</option>
+                    <option value="xy">x축과 y축</option>
                   </select>
                 </div>
                 <div>
-                  <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Count (한 번에 그리는 브러시 수)</div>
+                  <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Count (한번에 그리는 수)</div>
                   <div class="input-group ui-input-stepper">
                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                     <div class="form-control ui-input-stepper-data-value" >
