ready() 메소드 들의 동작 맞추기 중... 계속 작업해야할 듯

--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
     <script>
       window.addEventListener('load',(event)=>{
         document.getElementById('modal-layers').addEventListener('show.bs.modal', event => {
-          editor.readyLayer();
+          editor.ready();
         })
         
       },{once:true})
