--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               <div>
                 <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> Resize</div>
                 <div class="d-flex gap-1">
-                  <button class="btn btn-primary" onclick="let layer = editor?.document?.layer;if(!layer){return} layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();">Fit Document</button>
+                  <button class="btn btn-primary" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}">Fit Document</button>
                 </div>
               </div>
               
