--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
               <div class="d-flex justify-content-end gap-1">
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.addLayer();editor?.document?.layer.flush();"><i class="bi bi-file-plus"></i></button>
-                  <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.cloneLayer();editor?.document?.layer.flush();setTimeout(()=>{editor?.document.ready();},500) "><i class="bi bi-copy"></i></button>
+                  <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.cloneLayer();editor?.document?.layer.flush();editor?.document.ready(); "><i class="bi bi-copy"></i></button>
                   <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal-insert-layer" ><i class="bi bi-three-dots"></i></button>
                 </div>
                 <button type="button" class="btn btn-primary" onclick="editor?.document?.layer.clear();editor?.document?.layer.flush();editor?.document.ready();editor?.document?.history.save('layer.clear')"><i class="bi bi-eraser-fill"></i></button>
