--- a/brush.html
+++ b/brush.html
@@ -122,7 +122,8 @@
       // b1.brushConfig.saturationJitter = 1;
       // b1.brushConfig.brightnessJitter = 1;
       // b1.brushConfig.sizeControl = 'penPressure';
-      b1.brushConfig.flow = 0.25;
+      // b1.brushConfig.flow = 0.25;
+      b1.brushConfig.flow = 1;
       b1.brushConfig.spacing = 0.5;
       b1.brushConfig.flowControl = 'penPressure';
       b1.flush();
