--- a/brush.html
+++ b/brush.html
@@ -221,7 +221,7 @@
         <div class="card-body">
           <form name="formBrushConfig" class="form-brush-config" action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush(); c1.clear();redraw(); return false" >
             <div class="d-flex flex-column gap-3">
-              <div class="grid-auto-fit-260px gap-3">
+              <div class="div-brush-config grid-auto-fit-260px gap-3">
                 <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>                              
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-brush"></i> Shape(모양)</div>
@@ -493,6 +493,19 @@
                     <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                   </div>
                 </div>
+                <hr class="my-1">
+                <header> <h4 class="m-0">Build Up Effect (누적효과)</h4> </header>
+                <div>
+                  <div class="form-label mb-0"><i class="bi bi-shuffle"></i> Build Up (누적효과 인터벌 타임)</div>
+                  <div class="input-group ui-input-stepper">
+                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="sec"  data-value-to-fixed="2" >
+                      <input type="range" class="form-range d-block" name="buildUpInterval" placeholder="buildUpInterval" step="0.01" min="0" max="1" value="0" >
+                    </div>
+                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
+                  </div>
+                </div>
+                
               </div>
               <hr class="my-1">
               <div class="text-end">
