angleControl : direction 설정 추가.

--- a/index.html
+++ b/index.html
@@ -1679,6 +1679,7 @@
                       <option selected value="off">OFF</option>
                       <!-- <option value="penPressure">penPressure</option> -->
                       <option value="penTilt">penTilt(기울기)</option>
+                      <option value="direction">direction(그리는 방향)</option>
                     </select>
                   </div>
                   <hr class="my-1">
