--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
   
   <!-- //hammer.js -->
   
+  <!--  Custom Elements Polyfill. 사용자 정의 요소 폴리필. 사파리에서 is 애드리뷰트 동작안해서 -->
+  <!-- https://github.com/ungap/custom-elements -->
+  <script src="//unpkg.com/@ungap/custom-elements/es.js"></script>
+
   <!-- WG2 uploader -->
   
   <script src="/WG2/js/Wg2Uploder.js"></script>
@@ -215,7 +219,7 @@
       wcApp.body = wcApp.querySelector('.wc-app-body')
       wcApp.footer = wcApp.querySelector('.wc-app-footer')
       
-      document.querySelector('.checkbox-tool[value="Brush"]').click(); // 최초 선택 툴
+      // document.querySelector('.checkbox-tool[value="Brush"]').click(); // 최초 선택 툴
     })
     window.addEventListener('wc.tools.load',event=>{ console.log(event.type,event.detail); })
     window.addEventListener('wc.tools.select',event=>{ console.log(event.type,event.detail); })
